@@ -23,7 +23,7 @@ inverseProvinceMapping invertProvinceMap(provinceMapping& provMap);
 vector<string> processBlockedNations(Object* obj);
 
 typedef map< const CK2Title*, EU3Country* > countryMapping;
-int initCountryMap(countryMapping& mapping, vector<CK2Title*>& CK2Titles, vector<EU3Country*>& EU3Countries, vector<string>& blockedNations, Object* rulesObj);
+int initCountryMap(countryMapping& mapping, vector<CK2Title*>& CK2Titles, map<string, EU3Country*>& EU3Countries, vector<string>& blockedNations, Object* rulesObj);
 
 
 // Culture Mappings
